<resources>
    <string name="app_name">E-Weblog</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="about">E-Weblog for court cases, this application is a replacement of heavy manual diary to manage day to day Case details and Adjournment for lawyers on daily basis. Using this app you can maintain your daily data in a very less time as well you can edit and add your case details. Moreover you can also see all your complete case history till closing date. Now there is no fear to loss your data due to any reason as this application will be a  backup tool to your data in which you can be easily accessible at anytime anywhere by providing proper credentials entered by you during registration. moreover the details of case can be sent by single click. Into making tools to simplify your data regarding court cases and making it more convenient and understandable to common person. We are further dedicated towards betterment and adding futuristic approaches in our products As per requirement of time. We want to make people smarter by use of our apps.</string>
    <string name="vision">To become worlds leading IT company for digitalize every professional work.</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string-array name="day">
        <item>Day</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="month">
        <item>Month</item>
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>

    </string-array>
    <string-array name="year">
        <item>Year</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
    </string-array>
    <string-array name="case_type">
        <item>Select</item>
        <item>Criminal</item>
        <item>Civil</item>
        <item>Others</item>
    </string-array>
    <string-array name="time">
        <item>Select</item>
        <item>09:00AM</item>
        <item>09:15AM</item>
        <item>09:30AM</item>
        <item>09:45AM</item>
        <item>10:00AM</item>
        <item>10:15AM</item>
        <item>10:30AM</item>
        <item>10:45AM</item>
        <item>11:00AM</item>
        <item>11:15AM</item>
        <item>11:30AM</item>
        <item>11:45AM</item>
        <item>12:00PM</item>
        <item>12:15PM</item>
        <item>12:30PM</item>
        <item>12:45PM</item>
        <item>01:00PM</item>
        <item>01:15PM</item>
        <item>01:30PM</item>
        <item>01:45PM</item>
        <item>02:00PM</item>
        <item>02:15PM</item>
        <item>02:30PM</item>
        <item>02:45PM</item>
        <item>03:00PM</item>
        <item>03:15PM</item>
        <item>03:30PM</item>
        <item>03:45PM</item>
        <item>04:00PM</item>
        <item>04:15PM</item>
        <item>04:30PM</item>
        <item>04:45PM</item>
        <item>05:00PM</item>

    </string-array>
    <!-- <string-array name="asas">
         <item>12:00 AM</item>
         <item>12:15 AM</item>
         <item>12:30 AM</item>
         <item>12:45 AM</item>
         <item>01:00 AM</item>
         <item>01:15 AM</item>
         <item>01:30 AM</item>
         <item>01:45 AM</item>
         <item>02:00 AM</item>
         <item>02:15 AM</item>
         <item>02:30 AM</item>
         <item>02:45 AM</item>
         <item>03:00 AM</item>
         <item>03:15 AM</item>
         <item>03:30 AM</item>
         <item>03:45 AM</item>
         <item>04:00 AM</item>
         <item>04:15 AM</item>
         <item>04:30 AM</item>
         <item>04:45 AM</item>
         <item>05:00 AM</item>
         <item>05:15 AM</item>
         <item>05:30 AM</item>
         <item>05:45 AM</item>
         <item>06:00 AM</item>
         <item>06:15 AM</item>
         <item>06:30 AM</item>
         <item>06:45 AM</item>
         <item>07:00 AM</item>
         <item>07:15 AM</item>
         <item>07:30 AM</item>
         <item>07:45 AM</item>
         <item>08:00 AM</item>
         <item>08:15 AM</item>
         <item>08:30 AM</item>
         <item>08:45 AM</item>
         <item>05:15 PM</item>
         <item>05:30 PM</item>
         <item>05:45 PM</item>
         <item>06:00 PM</item>
         <item>06:15 PM</item>
         <item>06:30 PM</item>
         <item>06:45 PM</item>
         <item>07:00 PM</item>
         <item>07:15 PM</item>
         <item>07:30 PM</item>
         <item>07:45 PM</item>
         <item>08:00 PM</item>
         <item>08:15 PM</item>
         <item>08:30 PM</item>
         <item>08:45 PM</item>
         <item>09:00 PM</item>
         <item>09:15 PM</item>
         <item>09:30 PM</item>
         <item>09:45 PM</item>
         <item>10:00 PM</item>
         <item>10:15 PM</item>
         <item>10:30 PM</item>
         <item>10:45 PM</item>
         <item>11:00 PM</item>
         <item>11:15 PM</item>
         <item>11:30 PM</item>
         <item>11:45 PM</item>
     </string-array>-->

    <string name="custom_dialog_register_type">Register as an Individual Premium user to enjoy the advanced features.</string>
    <string name="custom_dialog_register_type_1">Yes,Become Premium User</string>
    <string name="custom_dialog_register_type_2">No thanks,Register for free</string>
    <string name="title_activity_advanced_search">AdvancedSearchActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view_cases">ViewCasesActivity</string>
</resources>
