<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" android:minWidth="@dimen/custom_dialog_min_width"
    android:layout_height="wrap_content" android:orientation="vertical" android:layout_margin="@dimen/custom_dialog_layout_margin">

    <TextView
        android:id="@+id/textDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/custom_dialog_text_size"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:text="@string/custom_dialog_register_type"
        android:layout_marginBottom="@dimen/custom_dialog_bottom_margin"/>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" android:layout_gravity="center">
    <TextView
        android:id="@+id/type1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_dialog_register_type_1"
        android:textSize="@dimen/custom_dialog_text_size_small"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:padding="@dimen/custom_dialog_bottom_margin_small"
        android:textAllCaps="true"
        />
    <TextView
        android:id="@+id/type2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_dialog_register_type_2"
        android:textSize="@dimen/custom_dialog_text_size_small"
        android:padding="@dimen/custom_dialog_bottom_margin_small"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:textAllCaps="true"
        /></LinearLayout>
</LinearLayout>