<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/bg">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/logo_width_height"
                android:layout_height="@dimen/logo_width_height"
                android:id="@+id/imageView2"
                android:src="@mipmap/elogow"
                android:layout_margin="@dimen/margin_logo"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:focusable="true"
                android:focusableInTouchMode="true">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/login_form_data_height"
                    android:padding="@dimen/login_images_padding"
                    android:background="@color/colorIcon"
                    android:src="@drawable/call"/>
                <!--     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:layout_weight="1">
          -->
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_form_data_height"
                    android:hint="Mobile Number"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="@dimen/login_form_data_text"
                    android:maxLength="10"
                    android:textColor="@android:color/white"
                    android:background="@color/colorText"
                    android:textColorHint="@android:color/darker_gray"
                    android:paddingLeft="@dimen/login_images_padding"

                    />

                <!-- </android.support.design.widget.TextInputLayout>-->
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/login_form_data_top_margin">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/login_form_data_height"
                    android:padding="@dimen/login_images_padding"
                    android:background="@color/colorIcon"
                    android:src="@drawable/password"/>
                <!--  <android.support.design.widget.TextInputLayout
                      android:layout_width="match_parent"
                      android:layout_height="45dp"

                      android:layout_weight="1">-->
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_form_data_height"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:layout_weight="1"
                    android:textSize="@dimen/login_form_data_text"
                    android:paddingLeft="@dimen/login_images_padding"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/darker_gray"
                    android:background="@color/colorText"
                    android:singleLine="true" />

                <!--  </android.support.design.widget.TextInputLayout>-->
            </LinearLayout>
            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_form_data_top_margin_large"
                android:background="@color/buttonbg"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_text_size"
                android:textAllCaps="false"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/login_form_data_text_small"
                android:text="Forgot Password?"
                android:textColor="@color/buttonbg"
                android:layout_marginTop="@dimen/login_form_data_top_margin"
                android:id="@+id/textView_forgot"
                android:layout_gravity="right" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/login_form_data_text_small"
                android:text="Not a User?"
                android:textColor="@color/buttonbg"
                android:layout_marginTop="@dimen/login_form_data_top_margin_small"
                android:id="@+id/textView"
                android:layout_gravity="right" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
