<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:background="@drawable/bg">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/imageView2"
                android:src="@mipmap/elogow"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:focusable="true"
                android:focusableInTouchMode="true">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:padding="10dp"
                    android:background="@color/colorIcon"
                    android:src="@drawable/person"/>
                <!--     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:layout_weight="1">
          -->
                <EditText
                    android:id="@+id/id"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="Corporate Id"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:maxLength="10"
                    android:textColor="@android:color/white"
                    android:background="@color/colorText"
                    android:textColorHint="@android:color/darker_gray"
                    android:paddingLeft="10dp"

                    />

                <!-- </android.support.design.widget.TextInputLayout>-->
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:focusable="true"
                android:focusableInTouchMode="true">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:padding="10dp"
                    android:background="@color/colorIcon"
                    android:src="@drawable/call"/>
                <!--     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:layout_weight="1">
          -->
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="Mobile Number"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:maxLength="10"
                    android:textColor="@android:color/white"
                    android:background="@color/colorText"
                    android:textColorHint="@android:color/darker_gray"
                    android:paddingLeft="10dp"

                    />

                <!-- </android.support.design.widget.TextInputLayout>-->
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:padding="10dp"
                    android:background="@color/colorIcon"
                    android:src="@drawable/password"/>
                <!--  <android.support.design.widget.TextInputLayout
                      android:layout_width="match_parent"
                      android:layout_height="45dp"

                      android:layout_weight="1">-->
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:paddingLeft="10dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/darker_gray"
                    android:background="@color/colorText"
                    android:singleLine="true" />

                <!--  </android.support.design.widget.TextInputLayout>-->
            </LinearLayout>
            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/buttonbg"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
